crates/sol-types/tests/ui/event.stderr
error: unexpected end of input, expected parentheses
 --> tests/ui/event.rs:3:1
  |
3 | / sol! {
4 | |     event MissingParens1
5 | | }
  | |_^
  |
  = note: this error originates in the macro `sol` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected parentheses
 --> tests/ui/event.rs:8:25
  |
8 |     event MissingParens2;
  |                         ^

error: expected `;`
  --> tests/ui/event.rs:11:1
   |
11 | / sol! {
12 | |     event MissingSemi1()
13 | | }
   | |_^
   |
   = note: this error originates in the macro `sol` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `;`
  --> tests/ui/event.rs:15:1
   |
15 | / sol! {
16 | |     event MissingSemi2() anonymous
17 | | }
   | |_^
   |
   = note: this error originates in the macro `sol` (in Nightly builds, run with -Z macro-backtrace for more info)

error: more than 3 indexed arguments for event
  --> tests/ui/event.rs:20:11
   |
20 |     event FourIndexedParameters(bool indexed, bool indexed, bool indexed, bool indexed);
   |           ^^^^^^^^^^^^^^^^^^^^^

error: more than 3 indexed arguments for event
  --> tests/ui/event.rs:24:11
   |
24 |     event FiveIndexedParameters(bool indexed, bool indexed, bool indexed, bool indexed, bool indexed);
   |           ^^^^^^^^^^^^^^^^^^^^^

error: more than 4 indexed arguments for anonymous event
  --> tests/ui/event.rs:32:11
   |
32 |     event FiveIndexedParametersAnonymous(bool indexed, bool indexed, bool indexed, bool indexed, bool indexed) anonymous;
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
